# Caerus

./: CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  DISCLAIMER.md  README.md  dev-install.sh  get-caerus.sh  install.sh
.claude/: settings.local.json  settings.local.json.tmp.2798.878f95aa1070
.github/workflows/: rust.yml
caerus/: Cargo.toml
caerus-helper/: Cargo.toml
caerus-helper/src/: main.rs
caerus/data/: org.voidlinux.caerus.desktop  org.voidlinux.caerus.metainfo.xml  org.voidlinux.caerus.policy
caerus/src/: main.rs
caerus/src/backend/: custom_filters.rs  history.rs  mod.rs  package.rs  package_store.rs  repo_names.rs  transaction.rs  transaction_preview.rs
caerus/src/ui/: alternatives_dialog.rs  apply_confirm.rs  apply_dialog.rs  custom_filters_dialog.rs  deps_confirm.rs  detail_pane.rs  dialog_util.rs  file_owner_dialog.rs  filter_sidebar.rs  history_dialog.rs  mod.rs  package_list.rs  remove_confirm.rs  repo_manager.rs  vkpurge_dialog.rs  window.rs
packaging/srcpkgs/caerus/: template
xbps-sys/: Cargo.toml  build.rs  wrapper.h
xbps-sys/src/: lib.rs
