[workspace]
resolver = "2"
members = [
    "xbps-sys",
    "caerus",
    "caerus-helper",
]

[workspace.package]
version = "0.4.0"
edition = "2021"
license = "GPL-3.0-or-later"
repository = "https://github.com/mendescotta/Caerus"

# Applies to every workspace member via `[lints] workspace = true` in
# each crate's own Cargo.toml — including caerus-helper, the one crate
# that most needs a lint bar enforced automatically rather than relying
# on remembering to pass `--all-targets` by hand.
[workspace.lints.clippy]
all = "warn"

[profile.release]
opt-level = 2
debug = true
