[package]
name = "caerus"
version.workspace = true
edition.workspace = true
description = "A Synaptic-inspired GTK4 package manager for Void Linux, built directly on libxbps"
license.workspace = true
repository.workspace = true

[lints]
workspace = true

[dependencies]
gtk = { package = "gtk4", version = "0.9", features = ["v4_12"] }
gio = "0.20"
glib = "0.20"
gdk = { package = "gdk4", version = "0.9", features = ["v4_12"] }
xbps-sys = { path = "../xbps-sys" }

[[bin]]
name = "caerus"
path = "src/main.rs"
