[package]
name = "xbps-sys"
version = "0.1.0"
edition = "2021"
description = "Raw FFI bindings to libxbps, generated at build time from the system headers"
license = "GPL-3.0-or-later"
repository = "https://github.com/mendescotta/caerus"
links = "xbps"
build = "build.rs"

[build-dependencies]
bindgen = "0.69"
pkg-config = "0.3"
