[package]
name = "xbps-sys"
version.workspace = true
edition.workspace = true
description = "Raw FFI bindings to libxbps, generated at build time from the system headers"
license.workspace = true
repository.workspace = true
links = "xbps"
build = "build.rs"

[lints]
workspace = true

[build-dependencies]
bindgen = "0.69"
pkg-config = "0.3"
